--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ POSTGRES_PORT=5432
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=pdf_me
+# Stripe
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_CURRENCY=usd
